--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,9 @@ jobs:
         shell: bash -l {0}
     strategy:
       fail-fast: false
-      os: [ubuntu-latest, windows-latest, macos-latest]
-      python-version: ['3.10']
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.10']
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
