--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,24 +11,25 @@ license = {file = "LICENSE"}
 authors = [{name = "World Bank", email = "github@worldbank.org"}]
 maintainers = [
 	{name = "Benjamin P. Stewart", email = "bstewart@worldbankgroup.org"},
-	{name = "Benny Istanto", email = "benny@istan.to"},
-	{name = "Andres Chamorro", email = "afche18@gmail.com"},
+	{name = "Andres Chamorro", email = "achamorroelizond@worldbank.org"},
 ]
 classifiers = [
 	"Programming Language :: Python :: 3.8",
 ]
 requires-python = ">=3.8"
 dependencies = [
-	"rtree==0.9.3",
-	"geopandas",
-	"rasterio",
 	"geojson",
+	"geopandas",
+	"osmnx",
+	"rasterio",
+	"rtree==0.9.3",
+	"scipy",
 ]
 
 [project.optional-dependencies]
 docs = [
 	"docutils==0.17.1",
-	"jupyter-book >=1,<2",
+	"jupyter-book>=1,<2",
 ]
 dev = [
 	"pytest",
