--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,39 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-    -   id: check-yaml
-        args: [--unsafe]
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-        args: [--markdown-linebreak-ext=md]
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.5.0
+      hooks:
+          - id: trailing-whitespace
+          - id: end-of-file-fixer
+          - id: check-yaml
+          - id: check-added-large-files
+          - id: check-ast
+          - id: check-json
+          - id: detect-aws-credentials
+            args: [--allow-missing-credentials]
+          - id: detect-private-key
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.39.0
+      hooks:
+          - id: markdownlint
+            name: Markdownlint
+            files: \.(md|mdown|markdown)$
+            args: [
+                    "--disable=MD013", # line-length
+                    "--disable=MD033", # no-inline-html
+                ]
+    - repo: https://github.com/codespell-project/codespell
+      rev: v2.2.6
+      hooks:
+          - id: codespell
+            name: codespell
+            description: Checks for common misspellings in text files
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.2.1
+      hooks:
+          - id: ruff
+            types_or: [python, pyi, jupyter]
+            args: [--fix]
+          - id: ruff-format
+            types_or: [python, pyi, jupyter]
