--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,3 +47,11 @@ opt = ["pulp"]
 
 [tool.setuptools_scm]
 write_to = "src/GOSTnets/_version.py"
+
+[tool.codespell]
+skip = 'docs/_build,docs/references.bib,__pycache__,*.png,*.gz,*.whl'
+ignore-regex = '^\s*"image\/png":\s.*'
+ignore-words-list = "gost,"
+
+[tool.ruff.pydocstyle]
+convention = "numpy"
