--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
           - id: codespell
             name: codespell
             description: Checks for common misspellings in text files
+            additional_dependencies: [tomli]
     - repo: https://github.com/astral-sh/ruff-pre-commit
       rev: v0.2.1
       hooks:
