add osgeo requirement to support ogr import

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["pre-commit", "pytest", "pytest-cov", "tomli", "GOStnets[docs,osm,opt]"]
 docs = ["docutils==0.17.1", "jupyter-book>=1,<2"]
-osm = ["gdal", "geopy", "boltons"]
+osm = ["gdal", "geopy", "boltons", "osgeo"]
 opt = ["pulp"]
 
 [project.urls]
