Resolving ruff code style errors (#57)
* fix markdown linter errors

* spelling fixes

* ruff linting for fetch_od.py

* lint the osm_parser.py script

* lint graphtool.py

* lint optimization.py

* lint network_clean.py

* lint load_osm.py

* lint fetch_pois.py

* lint core.py

* have ruff skip __init__.py

* lint calculate_od_raw.py

* finish linting calculate_od_raw.py

* lint tutorials/step 1

* fix ogr import

* add osgeo requirement to support ogr import

* change to support import ogr

* add boltons to req dependencies

* add geopy to req dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
 	"rtree>=0.9.3",
 	"scipy",
 	"shapely",
+	"boltons",
+	"geopy"
 ]
 
 [project.optional-dependencies]
@@ -55,3 +57,6 @@ ignore-words-list = "gost,nd,ans,chck,lenth"
 
 [tool.ruff.pydocstyle]
 convention = "numpy"
+
+[tool.ruff]
+exclude = ["__init__.py"]
