--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: GOST Urbanization
+title: GOSTnets
 author: Benjamin P. Stewart
 logo: images/logo.png
 
@@ -20,7 +20,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/worldbank/GOST_Urban # Online location of your book
+  url: https://github.com/worldbank/GOSTnets # Online location of your book
   path_to_book: docs # Optional path to your book, relative to the repository root
   branch: main # Which branch of the repository should be used when creating links (optional)
 
