--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,6 @@ Tutorial/tutorial_data/rek_grid_pop_gravity.shx
 # ignore the generated sphinx conf.py file
 # we generate it during the doc build using jupyter-book from _conf.py
 docs/conf.py
+docs/api/GOSTnets.rst
+docs/api/modules.rst
 _build/
