--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          conda install -c conda-forge gdal
+          conda install -c conda-forge -y gdal
           pip install .[dev]
       - name: Test with pytest via coverage
         run: |
