--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,23 +5,28 @@ on:
   pull_request:
 
 jobs:
-  build:
+  ubuntu-build:
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -l {0}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10"]
+        os: [ubuntu-latest]
+    env:
+      OS: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: conda-incubator/setup-miniconda@v3
+      - uses: conda-incubator/setup-miniconda@v3
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+          auto-update-conda: false
+          activate-environment: test-env
+          auto-activate-base: false
+      - name: Install dependencies then test
         run: |
-          conda install -c conda-forge -y gdal
+          conda install -c conda-forge gdal
+          conda install -c conda-forge pip
           pip install .[dev]
-      - name: Test with pytest via coverage
-        run: |
           coverage run -m pytest
           coverage report -m
