--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
           conda install -c conda-forge pip
           pip install .[dev]
           coverage run -m pytest
-          coverage report -m
+          coverage report -m --rcfile=pyproject.toml
