dont report coverage for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,4 @@ jobs:
           conda install -c conda-forge gdal
           conda install -c conda-forge pip
           pip install .[dev]
-          coverage run -m pytest
-          coverage report -m --rcfile=pyproject.toml
+          coverage run -m pytest --rcfile=pyproject.toml
