clean up tests a bit, add pooch for some data

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,4 @@ jobs:
           conda install -c conda-forge pip
           pip install .[dev]
           coverage run -m pytest
+          coverage report
