--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,31 +6,24 @@ on:
 
 jobs:
   ubuntu-build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash -l {0}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-    env:
-      OS: ${{ matrix.os }}
+
     steps:
       - uses: actions/checkout@v4
-      - name: Install GDAL system dependencies
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gdal-bin libgdal-dev
+
       - uses: conda-incubator/setup-miniconda@v3
         with:
           auto-update-conda: false
           activate-environment: test-env
           auto-activate-base: false
+          channels: conda-forge
+          channel-priority: strict
+
       - name: Install dependencies then test
         run: |
-          conda install -c conda-forge gdal
-          conda install -c conda-forge pip
-          pip install .[dev]
-          coverage run -m pytest
+          conda install -y python=3.10 gdal pip
+          python -m pip install .[dev]
+          python -m coverage run -m pytest
